--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
       </label>
       <label
         >Valor
-        <input placeholder="R$ 10.000,00" />
+        <input class="input-currency" placeholder="R$ 0,00" />
       </label>
-      <button>Converter</button>
+      <button class="convert-button">Converter</button>
       <section>
         <div class="real-box">
           <img src="./assents/Real.png" alt="Real-brasileiro" />
           <p class="dinheiro">Valor</p>
-          <p class="montante">R$ 10.000,00</p>
+          <p class="montante-real">R$ 0,00</p>
         </div>
         <div><img class="seta-img" src="./assents/Arrow.png" alt="seta" /></div>
         <div class="dolar-box">
           <img src="./assents/USA.png" alt="moeda-convertida" />
           <p class="dinheiro">Dólar</p>
-          <p class="montante">US$ 10.000,00</p>
+          <p class="montante">US$ 0,00</p>
         </div>
       </section>
     </main>
